src/test/ui/error-codes/E0118.stderr
error[E0118]: no base type found for inherent implementation
  --> $DIR/E0118.rs:1:6
   |
LL | impl (u8, u8) {
   |      ^^^^^^^^ impl requires a base type
   |
   = note: either implement a trait on it or create a newtype to wrap it instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0118`.
