src/test/ui/error-codes/E0118.rs
impl (u8, u8) { //~ ERROR E0118
    fn get_state(&self) -> String {
        String::new()
    }
}

fn main() {
}
